Fixed the current tab not showing as active

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -175,6 +175,20 @@ ul#menu li a.active {
     box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
 }
 
+ul#menu ul li a.active {
+    text-shadow: 1px 1px #323232;
+    background: #284020;
+    background: -moz-linear-gradient(#437133, #284020);
+    background: -o-linear-gradient(#437133, #284020);
+    background: -webkit-linear-gradient(#437133, #284020);
+    border-radius: 0px 15px 0px 15px;
+    -moz-border-radius: 0px 15px 0px 15px;
+    -webkit-border: 0px 15px 0px 15px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px;
+}
+
 ul#menu li:hover a#tab {
     text-shadow: 1px 1px #000;
     background: #284020;
